preventing horizontal scrolling & mobile responsive layout

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,7 @@
   --font-grotesque: "Darker Grotesque", sans-serif;
   --breakpoint-clg: 1500px;
 }
+
+body, html{
+  overflow-x: hidden;
+}
